--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lahad Web Developer</title>
+    <title>Lahad Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
 
@@ -32,7 +33,6 @@
         </div>
       </section>
 
-  
       <section class="dream-area">
         <div class="half-width">
           <img src="images/profile2.png" alt="" />
@@ -69,27 +69,6 @@
             </div>
         </div>
         </div>
-
-        <section class="signup">
-          <form action="#">
-            <div class="container">
-              <h1 class="signupHeader">Register</h1>
-              <p>Please Fill In This Form To Create An Account.</p>
-              <label for="email"><b>Email</b></label>
-              <input type="text" placeholder="Enter Your Email" name="email" required><br>
-              <label for="password"><b>Password</b></label>
-              <input type="password" placeholder="Enter Your Password" name="password" required><br>
-              <label for="password-repeat"><b>Repeat Password</b></label>
-              <input type="password" placeholder="Repeat Your Password" name="password-repeat" required><br>
-              <label>
-                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember Me
-              </label>
-              <p>Already Have an Account? <a href="signin.html" style="color:dodgerblue">Sign In</a></p>
-              <button type="submit" class="signupbtn">Sign Up</button>
-            </div>
-          </form>
-        </section>
-
         <section class="inquery">
             <div class="banner">
                 <div class="inquery-half">
@@ -112,9 +91,17 @@
             </div>
         </section>
 
+        <footer id="footer" class="footer container">
+          <div class="footer-contact">
+            <h1 class="footer-contact-heading">Contact With Me</h1>
+            <p class="footer-contact-info">Email: criclahad.2@gmail.com</p>
+            <p class="footer-contact-info">Phone: 96104556667</p>
+            <p class="footer-contact-info">Mobile: 01788052650</p>
+          </div>
+        </footer>
+
         <footer>
           <p><span class="copyright">© Lahaduzzaman Lahad, 2021,</span> All Rights Reserved. </p>
         </footer>
-
 </body>
 </html>
